--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".main.MainActivity" />
         <activity android:name=".registration.RegistrationActivity"/>
+        <service android:name=".call_functions.service.CallService" />
     </application>
 
 </manifest>
