--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.islavstan.talker">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+
+
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -21,7 +29,7 @@
 
         <service android:name=".call_functions.service.CallService" />
 
-        <activity android:name=".activities.CallActivity"></activity>
+        <activity android:name=".activities.CallActivity"/>
     </application>
 
 </manifest>
