--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,29 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'io.fabric'
+
+
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
+
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.islavstan.talker"
+        applicationId "com.islavstan.free_talker"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -33,5 +52,18 @@ dependencies {
     compile ("com.quickblox:quickblox-android-sdk-messages:3.3.0" )
     compile 'com.master.android:permissionhelper:1.0'
 
+    compile 'com.google.android.gms:play-services-ads:10.2.4'
+
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
+        transitive = true;
+    }
+
+
+    compile "com.google.android.gms:play-services-gcm:10.2.4"
+    compile "com.google.firebase:firebase-messaging:10.0.1"
+    compile "com.google.firebase:firebase-core:10.0.1"
+
 
 }
+apply plugin: 'com.google.gms.google-services'
